[tool.poetry]
name = "search-restaurant-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
google-search-results = "^2.4.2"
langchain = "^0.0.266"
langchain-community = "^0.0.20"
langchainhub = "^0.1.14"
llama-index = "^0.8.5"
pydantic = "^1.10.12"
openai = "^0.28.1"
streamlit = "^1.31.1"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
invoke = "^2.2.0"
mypy = "^1.8.0"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
known_first_party = ["search_restaurant_ai"]

[tool.flake8]
max-line-length = 120
ignore = "E501,W503"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
